[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "torch>=2.0.1",
    "Redis>=5.0.0",
    "transformers==2.8.0",
    "fuzzywuzzy>=0.18.0",
    "h5py>=3.9.0",
    "numpy>=1.25.2",
    "Cython>=3.0.2",
    "protobuf==3.11.3",
    "tensorboardX>=2.6",
    "tensorflow==2.8",
    "gunicorn>=21.2.0",
    "flask>=2.3.3",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl",
    "jericho>=3.1.2",
]
requires-python = ">=3.10, <3.11"
readme = "README.md"
license = {text = "MIT"}

